; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/oleaut32/extr_vartype.c_test_VarCySub.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/oleaut32/extr_vartype.c_test_VarCySub.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MATHVARS2 = common dso_local global i32 0, align 4
@VarCySub = common dso_local global i32 0, align 4
@EXPECT_OVERFLOW = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_VarCySub to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_VarCySub() #0 {
  %1 = load i32, i32* @MATHVARS2, align 4
  %2 = load i32, i32* @VarCySub, align 4
  %3 = call i32 @MATH2(i32 %2, double 5.000000e-01, double 5.000000e-01)
  %4 = call i32 @EXPECTCY(double 0.000000e+00)
  %5 = load i32, i32* @VarCySub, align 4
  %6 = call i32 @MATH2(i32 %5, double 5.000000e-01, double -4.000000e-01)
  %7 = call i32 @EXPECTCY(double 9.000000e-01)
  %8 = load i32, i32* @VarCySub, align 4
  %9 = call i32 @MATH2(i32 %8, double 5.000000e-01, double -6.000000e-01)
  %10 = call i32 @EXPECTCY(double 1.100000e+00)
  %11 = load i32, i32* @VarCySub, align 4
  %12 = call i32 @MATH2(i32 %11, double -5.000000e-01, double -5.000000e-01)
  %13 = call i32 @EXPECTCY(double 0.000000e+00)
  %14 = load i32, i32* @VarCySub, align 4
  %15 = call i32 @MATH2(i32 %14, double 0xC30A36E2EB1C4320, double 0xC30A36E2EB1C4320)
  %16 = call i32 @EXPECTCY(double 0.000000e+00)
  %17 = load i32, i32* @VarCySub, align 4
  %18 = call i32 @MATH2(i32 %17, double 0xC30A36E2EB1C4320, double 0x430A36E2EB1C4320)
  %19 = load i32, i32* @EXPECT_OVERFLOW, align 4
  %20 = load i32, i32* @VarCySub, align 4
  %21 = call i32 @MATH2(i32 %20, double 0x430A36E2EB1C4320, double 0xC30A36E2EB1C4320)
  %22 = load i32, i32* @EXPECT_OVERFLOW, align 4
  %23 = load i32, i32* @VarCySub, align 4
  %24 = call i32 @MATH2(i32 %23, double 0x430A36E2EB1C4320, double 0x430A36E2EB1C4320)
  %25 = call i32 @EXPECTCY(double 0.000000e+00)
  ret void
}

declare dso_local i32 @MATH2(i32, double, double) #1

declare dso_local i32 @EXPECTCY(double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
